--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ aiosignal==1.3.1
 annotated-types==0.6.0
 attrs==23.2.0
 certifi==2024.2.2
+charset-normalizer==3.3.2
 environs==10.3.0
 frozenlist==1.4.1
 idna==3.6
@@ -17,5 +18,7 @@ pillow==10.2.0
 pydantic==2.5.3
 pydantic_core==2.14.6
 python-dotenv==1.0.1
+requests==2.31.0
 typing_extensions==4.10.0
+urllib3==2.2.1
 yarl==1.9.4
